--- a/main.tex
+++ b/main.tex
@@ -57,13 +57,13 @@ Cloud Computing, Serverless, FaaS, Serverless Workflows, DAG, Metadata, Workflow
 \section{Introduction}
 \label{s:introduction}
 
-Function-as-a-Service (FaaS) represents a serverless cloud computing paradigm that simplifies application deployment by abstracting away infrastructure management. It provides automatic, elastic scalability—potentially without limit—along with a fine-grained, pay-per-use pricing model. This has led to its widespread adoption for event-driven systems, microservices, and web services on platforms like AWS Lambda\footnote{\label{fn:aws-lambda}https://aws.amazon.com/pt/lambda/}, Azure Functions\footnote{\label{fn:azure-funcs}https://azure.microsoft.com/en-us/products/functions}, and Google Cloud Functions\footnote{\label{fn:google-cloud-functions}https://cloud.google.com/functions}. These applications typically benefit the most from FaaS because they are lightweight, stateless, and characterized by highly variable or unpredictable workloads, allowing them to leverage serverless platforms' on-demand scalability and cost-efficiency.
+Function-as-a-Service (FaaS) represents a serverless cloud computing paradigm that simplifies application deployment by abstracting away infrastructure management. It provides automatic, elastic scalability—potentially without limit—along with a fine-grained, pay-per-use pricing model. This has led to its widespread adoption for event-driven systems, microservices, and web services on platforms like AWS Lambda\cite{aws_lambda}, Azure Functions\cite{azure_functions}, and Google Cloud Functions\cite{google_cloud_run_functions}. These applications typically benefit the most from FaaS because they are lightweight, stateless, and characterized by highly variable or unpredictable workloads, allowing them to leverage serverless platforms' on-demand scalability and cost-efficiency.
 
 This paradigm is also increasingly used to execute complex scientific and data processing workflows, such as the Cybershake~\cite{cybershake_workflow} seismic hazard analysis or Montage~\cite{montage_astronomy}, an astronomy image mosaicking workflow. These applications are structured as workflows—formally represented as Directed Acyclic Graphs (DAGs) of interdependent tasks. However, efficiently executing these complex workflows on serverless platforms remains a significant challenge. 
 
 Despite their advantages, serverless platforms present several limitations that complicate the execution of complex workflows. Since these platforms allow scaling down to zero resources to save costs, they can also introduce unpredictable latency, known as \textit{cold starts}~\cite{cold_starts_surey}, particularly for short-lived functions, affecting overall workflow performance. The lack of \textit{direct inter-function communication}~\cite{serverless_computing_drawbacks_survey_rw1} means that tasks often have to rely on external services, such as message brokers or databases to exchange intermediate data, which can increase overhead and reduce efficiency. Interoperability between platforms is further limited by the use of platform-specific workflow definition languages, which restricts the portability of workflows across different serverless environments. Additionally, while statelessness simplifies scaling and management, it can introduce overhead and complexity for applications that require continuity or coordination across multiple function invocations. Finally, developers have limited control over the underlying infrastructure, restricting the ability to optimize resource usage or tune performance for specific workloads.
 
-Several solutions have emerged to address the limitations of serverless platforms. Stateful functions (e.g., AWS Step Functions\footnote{\label{fn:aws-step-functions}https://aws.amazon.com/pt/step-functions/}, Azure Durable Functions\footnote{\label{fn:azure-durable-functions}https://learn.microsoft.com/en-us/azure/azure-functions/durable/durable-functions-overview?tabs=in-process\%2Cnodejs-v3\%2Cv1-model\&pivots=csharp}, and Google Cloud Workflows\footnote{\label{fn:google-cloud-workflows}https://cloud.google.com/workflows}) expand the range of applications that can run on serverless platforms by maintaining state across multiple function invocations, coordinating complex workflows, and providing built-in fault tolerance. Other approaches tackle limitations at the runtime level, proposing extensions to FaaS platforms (e.g., Faa\$T~\cite{faast_caching}, Palette~\cite{palette_load_balancing}, Lambdata~\cite{lambdata_intents}) or entirely new serverless architectures (e.g., Apache OpenWhisk~\cite{open_whisk}). Finally, some workflow-focused solutions (e.g., WUKONG~\cite{wukong_2}, Unum~\cite{unum_decentralized_orchestrator}, DEWEv3~\cite{dewe_v3}) employ scheduling strategies and workflow-level optimizations to enhance efficiency, primarily by improving data locality to bring computation closer to the data and minimize reliance on external services.
+Several solutions have emerged to address the limitations of serverless platforms. Stateful functions (e.g., AWS Step Functions\cite{aws_step_functions}, Azure Durable Functions\cite{azure_durable_functions}, and Google Cloud Workflows\cite{google_cloud_workflows}) expand the range of applications that can run on serverless platforms by maintaining state across multiple function invocations, coordinating complex workflows, and providing built-in fault tolerance. Other approaches tackle limitations at the runtime level, proposing extensions to FaaS platforms (e.g., Faa\$T~\cite{faast_caching}, Palette~\cite{palette_load_balancing}, Lambdata~\cite{lambdata_intents}) or entirely new serverless architectures (e.g., Apache OpenWhisk~\cite{open_whisk}). Finally, some workflow-focused solutions (e.g., WUKONG~\cite{wukong_2}, Unum~\cite{unum_decentralized_orchestrator}, DEWEv3~\cite{dewe_v3}) employ scheduling strategies and workflow-level optimizations to enhance efficiency, primarily by improving data locality to bring computation closer to the data and minimize reliance on external services.
 
 These workflow-focused approaches, however, often use uniform resources for workers and rely on “one-step scheduling,” making decisions based solely on the immediate workflow stage without considering the broader context or the downstream effects of their decisions. This combination of homogeneous worker configurations and limited scheduling foresight can lead to inefficient use of resources when tasks have diverse computational or memory requirements. Furthermore, the heuristic-based approaches used by other solutions can be inefficient in certain scenarios, as they lack mechanisms to adapt worker resource allocations to the specific needs of individual tasks. Moreover, we found no prior work that leverages metadata or historical metrics to inform scheduling decisions across an entire serverless workflow.  
 
@@ -138,7 +138,7 @@ result = a4.compute(
 )
 \end{lstlisting}
 
-One limitation of this DAG definition language is that it doesn't support "dynamic fan-outs" (e.g., creating a variable number of tasks depending on the result of another task) on a single workflow. This is a powerful and expressive feature, but that is seldom supported in other DAG definition languages (e.g., Dask, WUKONG, Unum, Oozie~\cite{apache_oozie} do not support it). These languages require the user to split the workflow into multiple workflows, one for each \textit{dynamic fan-out}: one workflow runs up to the task that generates a list of results, while a second workflow starts with a number of tasks that depends on the size or contents of that list. 
+One limitation of this DAG definition language is that it doesn't support "dynamic fan-outs" (e.g., creating a variable number of tasks depending on the result of another task) on a single workflow. This is a powerful and expressive feature, but that is seldom supported in other DAG definition languages (e.g., Dask~\cite{dask_python}, WUKONG~\cite{wukong_2}, Unum~\cite{unum_decentralized_orchestrator}, Oozie~\cite{apache_oozie} do not support it). These languages require the user to split the workflow into multiple workflows, one for each \textit{dynamic fan-out}: one workflow runs up to the task that generates a list of results, while a second workflow starts with a number of tasks that depends on the size or contents of that list. 
 
 Apache AirFlow~\footnote{https://airflow.apache.org/docs/apache-airflow/stable/authoring-and-scheduling/dynamic-task-mapping.html} supports this feature through an extension to their DAG language, allowing a variable number of tasks to be created at run-time depending on the number of results produced by a previous task. Implementing similar functionality is possible, but it would reduce the accuracy of predictions. This is because we would also need to predict the expected fan-out size, and any errors in that prediction could amplify inaccuracies in the predictions for the rest of the workflow.
 
@@ -496,7 +496,7 @@ Collectively, these frameworks rely on clusters of machines to distribute comput
 \subsection{Cloud-Native Workflow Scheduling}
 Traditional cluster-based frameworks often require significant expertise to configure, deploy, and maintain. Cloud-native workflow solutions provide a higher-level, managed approach, enabling developers to orchestrate workflows without worrying as much about underlying infrastructure. These platforms simplify deployment, and automatically handle resource allocation, fault tolerance, and state management.
 
-Prominent commercial serverless workflow platforms, also referred to as \textbf{stateful functions}, include AWS Step Functions~\textsuperscript{\ref{fn:aws-step-functions}}, Azure Durable Functions~\textsuperscript{\ref{fn:azure-durable-functions}}, and Google Cloud Workflows~\textsuperscript{\ref{fn:google-cloud-workflows}}. These solutions allow the user to create workflows by composing \textit{stateless} functions together. The platform is then responsible for the orchestration part, managing workflow state, intermediate results, and fault tolerance without requiring developers to implement state management themselves. These platforms typically employ \textit{checkpointing} techniques to persist workflow state, allowing the orchestrator or stateful function to pause while waiting for stages of the workflow to complete and then resume execution to trigger subsequent stages. Checkpointing also ensures that workflow execution can recover correctly after failures.
+Prominent commercial serverless workflow platforms, also referred to as \textbf{stateful functions}, include AWS Step Functions~\cite{aws_step_functions}, Azure Durable Functions~\cite{azure_durable_functions}, and Google Cloud Workflows~\cite{google_cloud_workflows}. These solutions allow the user to create workflows by composing \textit{stateless} functions together. The platform is then responsible for the orchestration part, managing workflow state, intermediate results, and fault tolerance without requiring developers to implement state management themselves. These platforms typically employ \textit{checkpointing} techniques to persist workflow state, allowing the orchestrator or stateful function to pause while waiting for stages of the workflow to complete and then resume execution to trigger subsequent stages. Checkpointing also ensures that workflow execution can recover correctly after failures.
 
 This orchestration and management capability is typically billed separately, reflecting both the convenience and reliability it provides and the additional resources required to maintain workflow state and fault tolerance. The main differences among these platforms lie in their execution model, workflow definition, and target use cases. Both AWS Step Functions and Google Cloud Workflows use JSON to represent workflow state machines, while Azure Durable Functions provides a more flexible programming model, where workflows are defined in code. One advantage of using such commercial services is that integration with other cloud services is easier, as they are tightly integrated with the AWS, Azure, and Google Cloud ecosystems.
 
@@ -549,19 +549,23 @@ Serverless workflow engines like PyWren, Unum, and WUKONG represent the most dir
 % ------------------------------------------------ %
 
 \section{Conclusion}
-% #############################################################################
-\subsection{Achievements}
-%TODO: After results and results analysis are added to  the document, use Gemini Pro to bootstrap this subsection (context: entire pdf doc)
-%TODO: Mention that we created a solution with enough flexiblity to be used and expanded by other researchers to experiment with different prediction and scheduling strategies (ask gemini to help with this given the context of the pdf doc)
 
-% #############################################################################
+\subsection{Summary of Achievements}
+
+This work explored prediction-based scheduling for serverless workflows, aiming to reduce makespan and improve resource efficiency by leveraging historical task metrics. We designed, implemented, and evaluated a decentralized workflow engine that integrates predictive planning with global knowledge of workflow structure.
+
+Our evaluation demonstrated that predictive scheduling provides tangible benefits. Across multiple workflows, our planners generally outperformed WUKONG, a state-of-the-art decentralized engine. The optimized \textbf{Non-Uniform} planner achieved the lowest makespan, while the \textbf{Uniform} planner proved to be more resource-efficient. These improvements stem from co-location strategies and optimizations such as \textbf{pre-warming} and \textbf{pre-loading}, which reduced both worker startup delays and data waiting times.
+
+Beyond performance results, this work contributes a modular framework separating \textbf{prediction}, \textbf{planning}, and \textbf{execution} layers, providing a foundation for future research in predictive scheduling.
+
+
 \subsection{Limitations and Future Work}
 
-While this thesis presents a novel solution for efficiently scheduling serverless workflows, several limitations suggest avenues for future work. A primary concern is the unbounded growth of stored prediction samples; implementing a \textbf{data summarization or downsampling strategy} would reduce storage needs while preserving essential statistics. The \textbf{optimization system} could also benefit from a stronger abstraction layer to manage \textbf{conflicting optimizations}, and adding robust \textbf{error handling}, including \textbf{exponential backoff} retries and improved client-side reporting, would enhance both reliability and would help users debug their workflows.
+The current solution has limitations that suggest directions for further work. Historical data management could be improved with summarization or downsampling to maintain scalability. Optimization handling could benefit from stronger abstractions to manage conflicting strategies, and more robust error handling would improve reliability.
 
-User control and expressiveness could be expanded by allowing \textbf{dynamic fan-outs} and specifying \textbf{minimum resource configurations} for tasks, enabling more complex workflows. A more interactive dashboard could provide richer visualizations and allow users to \textbf{manage, launch, and simulate workflows} directly.
+Future work could explore more aggressive optimizations, such as \textit{task duplication}, which trades higher resource usage for lower latency, and support for dynamic workflow structures, allowing fan-outs to vary at runtime. Enhancing user control—through minimum resource specifications for tasks and interactive dashboards—would increase usability and observability.
 
-Finally, to assess generalizability, future work should include a \textbf{comparative analysis of alternative prediction strategies} and \textbf{quantification of individual optimization contributions}. Evaluating the system on \textbf{commercial FaaS platforms} and a \textbf{broader set of real-world workflows} would test scalability, robustness, and highlight potential areas for improvement.
+Finally, broader evaluation is needed to assess generalizability. Comparative studies of alternative prediction strategies, deployment on commercial FaaS platforms, and tests with complex real-world workflows would provide a more complete understanding of the system's performance, strengths, and limitations.
 
 \bibliographystyle{IEEEtran}
 \bibliography{references}
